<resources>
    <string name="app_name">Ambedkar Mission</string>
    <string name="app_name_h">अम्बेडकर मिशन</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Registration</string>
    <string name="Submit">Submit</string>
    <string name="Name">Name</string>
    <string name="fathersName">Fathers Name</string>
    <string name="castname">Cast Name</string>
    <string name="mail_id">Email id</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="blood_group">Blood group</string>
    <string name="state">state</string>
    <string name="village">Village</string>
    <string name="postcode">Postal Code</string>
    <string name="district">Select District</string>
    <string name="user_already_exist">User already exist</string>
    <string name="selectState">Select State</string>
    <string name="searchState">Search State</string>
    <string name="searchDistrict">Search District</string>
    <string name="name_require">Name is required</string>
    <string name="state_require">State name is required</string>
    <string name="district_require">District name is required</string>
    <string name="email_require">Email or Mobile no is required</string>
    <string name="enterOtp">Enter One Time Password!</string>
    <string name="enterTheOtpBelowInCaseFail">Enter the OTP below in case if we fail to detect the SMS automatically.</string>
    <string name="please_enter_otp">Please enter OTP.</string>
    <string name="enter_Otp">Enter OTP</string>
    <string name="resend_otp">Resend?</string>
    <string name="submit">Submit</string>
    <string name="otp_not_match">Otp not matched</string>
    <string name="select_your_gender">Select your gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="otp_should_be_greater_than3">Otp should be greater than 3</string>
    <string name="resend_message"> OTP has been sent to your phone number.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="home">Home</string>
    <string name="register">Register</string>
    <string name="feedback">Feedback</string>
    <string name="aboutUs">AboutUs</string>
    <string name="AmbedkarMission">AmbedkarMission</string>
    <string name="login">Login</string>
    <string name="Reply">Comment</string>
    <string name="password">Password</string>
    <string name="userName">User Name</string>
    <string name="password_require">Password is required</string>
    <string name="preference_file_key">missan_preference</string>
    <string name="loginAuthKey">login_auth_key</string>
    <string name="logout">Logout</string>
    <string name="upload_media">Upload media</string>
    <string name="choose_media_type">Choose Media Type</string>
    <string name="choose_file">Choose file</string>
    <string name="file_name">No file</string>
    <string name="message_require">Message is required</string>
    <string name="username_require">Username is required</string>
    <string name="pdf">PDF Message</string>
    <string name="DOCX">DOCX Message</string>
    <string name="AUDIO">Audio Message</string>
    <string name="VIDEO">Video Message</string>
    <string name="IMAGE">Image Message</string>
    <string name="TEXT">Text</string>
    <string name="login_successfully">Login successfully</string>
    <string name="CAPTUREIMAGE">CAPTUREIMAGE</string>
    <string name="message">Message</string>
    <string name="share_using">Share using</string>
    <string name="theme_msg_name">शिक्षित समाज जागृति देश।</string>
    <string name="no_data_found">No Data Found</string>
    <string name="type_your_msg">Your questions or suggestions</string>

    <string-array name="media_type">
        <item>Text</item>
        <item>Choose Image</item>
        <item>Video</item>
        <item>Audio</item>

       <!-- <item>PDF</item>
        <item>DOCX</item>-->

    </string-array>



</resources>
