<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp"
    android:layout_margin="@dimen/_25sdp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_your_gender"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/colorBlack"
        />
    <RadioGroup
        android:id="@+id/maleFemaleGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        >

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="@dimen/_14ssp"
            />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/female"
            android:textSize="@dimen/_14ssp"
            />

    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:orientation="horizontal"
        android:gravity="end"
        >
        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/selected_option"
            android:textSize="@dimen/_14ssp"


            />
        <TextView
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@color/selected_option"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:textSize="@dimen/_14ssp"


            />

    </LinearLayout>

</LinearLayout>