<?xml version="1.0" encoding="utf-8"?>
<layout>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Registration">


        <RelativeLayout
            android:id="@+id/registerTxtLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:background="@color/selected_option"
            >

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_arrow_back_black_24dp"
                />

            <TextView
                android:id="@+id/registerTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/login"
                android:textSize="@dimen/ex_large_size" />

        </RelativeLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registerTxtLayout"
            android:fillViewport="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_30ssp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/l_name"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="5dp">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/userName"
                        android:inputType="text"
                        android:maxLength="40"
                        android:maxLines="1"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/l_father"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="5dp">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="text"
                        android:maxLength="40"
                        android:maxLines="1"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/submitBt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/selected_option"
                    android:text="@string/Submit"
                    android:textColor="#FFFFFF"
                    android:textSize="15dp" />
            </LinearLayout>
        </ScrollView>


    </RelativeLayout>

</layout>